--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 OPENWEATHER_API_KEY=6fdfea2755a22b43c5f7ab966b7cbb62
 DB_CONNECTION_STRING=weather_data.db
+SENDER_EMAIL=nithyanandsn7@gmail.com
+APP_PASSWORD=wfpx iyii mkri iiuo
+RECIPIENT_EMAIL=nithyu.123@gmail.com
